--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-bs4==0.0.1
-lxml==4.9.2
 mypy==1.1.1
 pytest==7.2.2
-selenium==4.8.3
-types-beautifulsoup4==4.12.0.1
 coverage
+requests
+types-requests
